# Learning-OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  imgui.ini
include/glad/: glad.h
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  glad.c  main.cpp  shader.cpp  shader.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h
